commit: optimize code (not finish)
