# routes/accountRoutes.js
@@ -11,6 +11,7 @@ account_router.post('/getTokenLogin', [accountValidator.validateLoginTokenSchema
 account_router.post('/forgotPassword', accountValidator.validateEmailForgot, accountController.forgotPassword);
 account_router.post('/resetPassword/:token', [authValidator.verifyTokenResetPwd ,accountValidator.validateNewPassword], accountController.resetPassword);
 account_router.put('/updateProfile', [authValidator.verifyTokenLogin, fileUploader.uploadAvatar.single('avatar')], accountController.updateProfile);
+account_router.put('/primeUpgrade', authValidator.verifyTokenLogin, accountController.primeUpgrade);
 // test route for api who need login 
 account_router.get('/testGetToken', authValidator.verifyTokenLogin, accountController.testGetToken);
 account_router.get('/testApi', accountController.testApi);
